Bug 1238605 - remove unnecessary extra check for |sBundleService| and unused |foundServer| to suppress warnings. r=bwinton